--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -7,9 +7,11 @@ header.masthead {
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
+
   .intro-text {
     padding-top: 150px;
     padding-bottom: 100px;
+
     .intro-lead-in {
       font-size: 22px;
       font-style: italic;
@@ -17,20 +19,37 @@ header.masthead {
       margin-bottom: 25px;
       @include serif-font;
     }
+
     .intro-heading {
-      font-size: 50px;
+      font-size: 45px;
       font-weight: 700;
       line-height: 50px;
       margin-bottom: 25px;
       @include heading-font;
+
+      span {
+        color: #fed136;
+      }
+    }
+
+    .intro-subheading p {
+      font-size: 32px;
+      font-weight: normal;
+      line-height: normal !important;
+
+      span {
+        color: #fed136;
+      }
     }
   }
 }
-@media(min-width:768px) {
+
+@media(min-width: 768px) {
   header.masthead {
     .intro-text {
       padding-top: 300px;
       padding-bottom: 200px;
+
       .intro-lead-in {
         font-size: 40px;
         font-style: italic;
@@ -38,6 +57,7 @@ header.masthead {
         margin-bottom: 25px;
         @include serif-font;
       }
+
       .intro-heading {
         font-size: 70px;
         font-weight: 700;
